--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./css/index.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+			integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<title>Video pLayer</title>
 	</head>
 
@@ -15,22 +21,37 @@
 		<div class="container">
 			<h1 class="title">Video Player</h1>
 			<div class="video-container">
-				<video id="video" class="video" controls muted src="./videos/Naruto-Centuries.mp4"></video>
-				<div class="description">
-					<h2 class="video_title">Naruto Centuries</h2>
-				</div>
+				<video
+					id="video"
+					class="video"
+					controls
+					muted
+					src="./videos/Naruto-Centuries.mp4"
+				></video>
 			</div>
 			<div class="playlist-container">
 				<div class="playlist">
 					<h2 class="playlist_title">Playlist</h2>
-					<ul class="playlist_list" id="playlist">
-					</ul>
+					<ul class="playlist_list" id="playlist"></ul>
 				</div>
 			</div>
 		</div>
 		<footer class="footer">
-			<p><strong>PIEROMC.</strong>DEV</p>
-			<span>copyright &copy; 2021</span>
+			<p>
+				Derechos reservados copyright &copy; 2020 -
+				<strong>pieromc.</strong>dev
+			</p>
+			<ul class="sociales">
+				<li class="item_social">
+					<a href="https://github.com/pieromc07"> <i class="fab fa-github"></i></a>
+				</li>
+				<li class="item_social">
+					<a href="https://twitter.com/Pieromc07"> <i class="fab fa-twitter"></i></a>
+				</li>
+				<li class="item_social">
+					<a href="https://www.facebook.com/Piero.mc07"> <i class="fab fa-facebook-f"></i></a>
+				</li>
+			</ul>
 		</footer>
 		<script type="module" src="./js/index.js"></script>
 	</body>
