--- a/index.html
+++ b/index.html
@@ -2,57 +2,57 @@
 
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./css/index.css" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-			integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		/>
-		<title>Video pLayer</title>
-	</head>
 
-	<body>
-		<div class="container">
-			<h1 class="title">Video Player</h1>
-			<div class="video-container">
-				<video
-					id="video"
-					class="video"
-					controls
-					muted
-					src="./videos/Naruto-Centuries.mp4"
-				></video>
-			</div>
-			<div class="playlist-container">
-				<div class="playlist">
-					<h2 class="playlist_title">Playlist</h2>
-					<ul class="playlist_list" id="playlist"></ul>
-				</div>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="./css/index.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+		integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<title>Video pLayer</title>
+</head>
+
+<body>
+	<div class="container">
+		<h1 class="title">Video Player</h1>
+		<div class="video-container" id="video-container">
+		</div>
+		<div class="playlist-container">
+			<div class="playlist">
+				<h2 class="playlist_title">Playlist</h2>
+				<ul class="playlist_list" id="playlist"></ul>
 			</div>
 		</div>
-		<footer class="footer">
-			<p>
-				Derechos reservados copyright &copy; 2020 -
-				<strong>pieromc.</strong>dev
-			</p>
-			<ul class="sociales">
-				<li class="item_social">
-					<a href="https://github.com/pieromc07"> <i class="fab fa-github"></i></a>
-				</li>
-				<li class="item_social">
-					<a href="https://twitter.com/Pieromc07"> <i class="fab fa-twitter"></i></a>
-				</li>
-				<li class="item_social">
-					<a href="https://www.facebook.com/Piero.mc07"> <i class="fab fa-facebook-f"></i></a>
-				</li>
-			</ul>
-		</footer>
-		<script type="module" src="./js/index.js"></script>
-	</body>
+	</div>
+	<footer class="footer">
+		<p>
+			Copyright &copy; 2020 -
+			<strong>pieromc.</strong>dev
+		</p>
+		<ul class="sociales">
+			<li class="item_social">
+				<a href="https://github.com/pieromc07"> <i class="fab fa-github"></i></a>
+			</li>
+			<li class="item_social">
+				<a href="https://twitter.com/Pieromc07"> <i class="fab fa-twitter"></i></a>
+			</li>
+			<li class="item_social">
+				<a href="https://www.facebook.com/Piero.mc07"> <i class="fab fa-facebook-f"></i></a>
+			</li>
+		</ul>
+	</footer>
+	<input  type="button" value="pulsame" onclick="hola()">
+	<script type="module" src="./js/index.js"></script>
+	<script >
+		function playvideo(index) {
+			const vidoplay = document.getElementById("video-container");
+			const video = document.getElementById(index);
+			const url = video.children[0].textContent;
+			vidoplay.innerHTML = `<video id="video" class="video" autoplay controls src="${url}"></video>`;
+		}
+	</script>
+</body>
+
 </html>
